Added POM folders

--- a/MobileApp.Automation.POM/MobileApp.Automation.POM.csproj
+++ b/MobileApp.Automation.POM/MobileApp.Automation.POM.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <Folder Include="PageObjects\" />
     <Folder Include="PageFunctions\" />
+    <Folder Include="PageObjects\" />
+    <Folder Include="PageFunctions\" />
   </ItemGroup>
 
   <ItemGroup>
