--- a/MobileApp.Automation.Utilities/MobileApp.Automation.Utilities.csproj
+++ b/MobileApp.Automation.Utilities/MobileApp.Automation.Utilities.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="EPPlus" Version="7.5.2" />
     <PackageReference Include="ExtentReports" Version="5.0.4" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.70" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.49" />
